# homepage

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  eslint.config.mjs  keystatic.config.ts  next.config.ts  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vercel.json
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: dev.yaml  etl.yaml  plex-etl.yaml
backend/: database.py  db_service.py  etl.py  plex_etl.py  unsplash_client.py
backend/providers/: tmdb.py  unsplash.py
components/pages/: about.py  blog.py  collection_detail.py  collections.py  gallery.py  home.py  insights.py
components/ui/: footer.py  head.py  header.py
content/articles/: acultura-te-agent-swarm.mdoc  acultura-te-ingestion-and-website-architecture.mdoc  home-server-part-1-foundation.mdoc  home-server-part-2-media-center.mdoc  home-server-part-3-vpn-split-tunneling.mdoc  home-server-part-4-secure-tunnel.mdoc  home-server-part-5-das-upgrade.mdoc
content/events/: climbing-pico-mountain.yaml  continental-grande-premio-de-natal-2024.yaml  corrida-francisco-lazaro-2026.yaml  corrida-sao-silvestre-2022.yaml  corrida-sporting-2023.yaml  ctw-christmas-party.yaml  ctw-summer-concert.yaml  edp-mini-maratona-2022.yaml  meia-maratona-lisboa-2023.yaml  vodafone-10k-lisbon-2026.yaml  vodafone-10k-lisbon.yaml
content/gear/: 50mm-lens.yaml  camera-body.yaml  cymbals.yaml  drum-kit.yaml  hoka-clifton-10.yaml  roland-td-02-kv.yaml  running-shoes.yaml  sony-a6600.yaml  sony-sel-35-f18.yaml  sony-sel-50-f18-f-50mm-f1-8.yaml  sony-sel-50-f18-f.yaml  sony-sel-50-f18.yaml
content/hobbies/: drums.yaml  film.yaml  hiking.yaml  music.yaml  photography.yaml  running.yaml  series.yaml  watching.yaml
content/pages/: about.md
content/projects/: acultura-te.mdoc
content/watch-items/: 1289.yaml  1935.yaml  3618.yaml  3925.yaml  3941.yaml  4028.yaml  565.yaml  63.yaml  a-knight-of-the-seven-kingdoms.yaml  anastasia.yaml  bring-her-back.yaml  exit-8.yaml  hamnet.yaml  hercules.yaml  house-of-the-dragon.yaml  if-i-had-legs-id-kick-you.yaml  kingdom-of-heaven.yaml  marcello-hernandez-american-boy.yaml  normal.yaml  oldboy.yaml  one-battle-after-another.yaml  one-piece.yaml  pillion.yaml  plur1bus.yaml  reality-check-inside-americas-next-top-model.yaml  seinfeld.yaml  sentimental-value.yaml  shrek.yaml  the-boys.yaml  the-secret-agent.yaml  the-white-lotus.yaml  wicked-for-good.yaml  widows-bay.yaml  wuthering-heights.yaml  young-sherlock.yaml
data/: photos.db  watch-history.json
src/: middleware.ts  proxy.ts
src/app/: globals.css  icon.tsx  layout.tsx  not-found.tsx  page.tsx  sitemap.ts
src/components/: footer.tsx  header.tsx  tag.tsx
src/lib/: articles.ts  aspect-ratio.ts  deterministic-pick.ts  events.ts  format-date.ts  gear.ts  hobbies.ts  hobby-feed-filter.ts  hobby-feed.ts  hobby-filter-categories.ts  photos.ts  projects.ts  (+5 more)
(+46 files in other folders)
