[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photography-home"
version = "1.0.0"
description = "Photography portfolio data pipeline"
authors = [{name = "João Rodrigues"}]
requires-python = ">=3.10"
dependencies = [
    "requests",
    "python-dotenv",
    "pycountry",
    "plexapi",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5.0",
    "ruff>=0.7.0",
    "bandit[toml]>=1.7.0",
    "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]
exclude = ["tests*", "data*", "content*", ".venv*", "*.egg-info"]

[tool.ruff]
# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
]

# Line length to match prettier
line-length = 100
indent-width = 4

# Target Python 3.10+
target-version = "py310"

[tool.ruff.lint]
# Enable recommended rules
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ARG",   # flake8-unused-arguments
    "SIM",   # flake8-simplify
    "PL",    # pylint
]

# Ignore specific rules
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

# Allow fix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.per-file-ignores]
# Pytest fixture arguments are injected for their side effects (DB setup,
# fixtures) and are often unused in the test body by design.
"tests/*" = ["ARG001"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "single"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["backend"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601", "B608"]  # B608: SQL injection check - using whitelisted values

[tool.bandit.assert_used]
skips = ["*_test.py", "test_*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# Exclude local tests that require API keys
addopts = [
    "-v",
    "--tb=short",
    "--ignore=tests/local_tests",
]
# Set PYTHONPATH to include project root
pythonpath = "."
